ajuste no caminho dos arquivos

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css" />
-    <link rel="stylesheet" href="/main/style.css">
+    <link rel="stylesheet" href="./main/style.css">
     <title>Gerador de mensagem</title>
 </head>
 
@@ -20,8 +20,8 @@
             <button id="btn" class="btn_container">Gerar Mensagens</button>
         </div>
     </section>
-    
-    <script src="/js/index.js"></script>
+
+    <script src="./js/index.js"></script>
 </body>
 
 </html>
